--- a/_QI_nfp1/README
+++ b/_QI_nfp1/README
@@ -1,1 +1,1 @@
-Please see Jorge 2022, https://arxiv.org/abs/2205.05797, for details on the VMEC files in this directory.
+Please see Jorge, et. al. 2022, https://arxiv.org/abs/2205.05797, for details on the VMEC files in this directory.
